--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://cloudstack12.github.io/nerdalert2-12-22/">https://cloudstack12.github.io/nerdalert2-12-22/</a><br>
+                <a target="_bLank" href="https://nerdalertsolutions.s3.ap-northeast-1.amazonaws.com/2-12-22/index.html">https://nerdalertsolutions.s3.ap-northeast-1.amazonaws.com/2-12-22/index.html</a><br>
+                <a target="_bLank" href="https://glowing-taiyaki-678528.netlify.app/">https://glowing-taiyaki-678528.netlify.app/</a><br>
             </section>
 
         </div>
